--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
@@ -15,11 +14,23 @@
         --navy-dark: #001f3f;
         --navy-darker: #000c1a;
       }
+      /* 
+         CRITICAL: Force solid opaque backgrounds to prevent any transparency 
+         that might be caused by browser defaults or parent containers.
+      */
+      html {
+        background-color: #000c1a !important;
+        height: 100%;
+      }
       body {
         font-family: 'Inter', sans-serif;
-        background-color: var(--navy-darker);
+        background-color: #000c1a !important;
         color: white;
         overflow-x: hidden;
+        margin: 0;
+        padding: 0;
+        min-height: 100%;
+        width: 100%;
       }
       h1, h2, h3, h4, h5, h6, .font-heading {
         font-family: 'Space Grotesk', sans-serif;
@@ -28,14 +39,14 @@
       .bg-navy-dark { background-color: var(--navy-dark); }
       .bg-navy-darker { background-color: var(--navy-darker); }
       
-      /* Custom matrix effect animation */
+      /* Custom matrix effect animation - reduced opacity and speed to be less distracting */
       @keyframes matrix {
-        0% { opacity: 0.1; transform: translateY(0) scale(1); }
-        50% { opacity: 0.4; transform: translateY(15px) scale(1.05); }
-        100% { opacity: 0.1; transform: translateY(0) scale(1); }
+        0% { opacity: 0.05; transform: translateY(0); }
+        50% { opacity: 0.15; transform: translateY(10px); }
+        100% { opacity: 0.05; transform: translateY(0); }
       }
       .animate-matrix {
-        animation: matrix 5s infinite alternate ease-in-out;
+        animation: matrix 8s infinite alternate ease-in-out;
       }
 
       /* Floating animation */
