--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
@@ -57,6 +58,23 @@
       }
       .animate-float {
         animation: float 6s infinite ease-in-out;
+      }
+
+      /* Fade in animations */
+      @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+      .animate-fade-in {
+        animation: fadeIn 0.4s ease-out forwards;
+      }
+
+      @keyframes floatUp {
+        from { opacity: 0; transform: translateY(20px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+      .animate-float-up {
+        animation: floatUp 0.5s cubic-bezier(0.23, 1, 0.32, 1) forwards;
       }
 
       /* Glow pulse */
